[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/OriginPoint.material" type="Material" id=1]
[ext_resource path="res://3DEditor/ObjectProperties/OriginPoint.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=1]
radius = 0.1
height = 0.2
radial_segments = 16
rings = 8

[sub_resource type="SphereShape" id=2]
radius = 0.1

[node name="OriginPoint" type="StaticBody"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.141875, 0 )
visible = false
billboard = 1

[connection signal="input_event" from="." to="." method="_on_OriginPoint_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_OriginPoint_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_OriginPoint_mouse_exited"]
